# ots_hw_12_map_reduce

./: CMakeLists.txt  Doxyfile  annotated.html  classMapReduce-members.html  classMapReduce.html  classes.html  dir_3ee47e6a3f6bb14d23b8780f671b7068.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html  map__reduce_8h_source.html  version_8h_source.html
.github/workflows/: doxygen-gh-pages.yml  release.yml
lib/version_lib/: CMakeLists.txt  version.cpp
search/: all_0.js  classes_0.js  functions_0.js
src/: CMakeLists.txt  main.cpp  map_reduce.h  test.txt
